--- a/.github/workflows/yehezgun.yaml
+++ b/.github/workflows/yehezgun.yaml
@@ -23,9 +23,11 @@ jobs:
         cache: "pnpm"
     - name: Install Deps (immutable)
       run: pnpm install --no-frozen-lockfile
-    - name: Run Biome Formatter
-      run: pnpm biome-format:ci
-    - name: Run Biome Linter
-      run: pnpm biome-lint:ci
+    - name: Setup Biome
+      uses: biomejs/setup-biome@v2
+      with:
+        version: latest
+    - name: Run Biome
+      run: biome ci src/
     - name: Build
       run: pnpm build
