--- a/.github/workflows/yehezgun.yaml
+++ b/.github/workflows/yehezgun.yaml
@@ -28,6 +28,6 @@ jobs:
       with:
         version: latest
     - name: Run Biome
-      run: biome ci src/
+      run: biome lint src/
     - name: Build
       run: pnpm build
