--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"biome-format": "biome format --write src/"
+		"biome-format": "biome format --write src/",
+		"biome-lint": "biome lint src/"
 	},
 	"dependencies": {
 		"next": "14.2.4",
