--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
 		"build": "next build",
 		"start": "next start",
 		"biome-format": "biome format --write src/",
-		"biome-lint": "biome lint src/"
+		"biome-lint": "biome lint src/",
+		"up-latest": "pnpm up --latest"
 	},
 	"dependencies": {
-		"next": "14.2.4",
+		"next": "14.2.5",
 		"next-themes": "^0.3.0",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-icons": "^5.2.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
-		"@tailwindcss/typography": "^0.5.13",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@tailwindcss/typography": "^0.5.14",
+		"@types/node": "^22.2.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"daisyui": "^4.12.10",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"postcss": "^8.4.41",
+		"tailwindcss": "^3.4.9",
+		"typescript": "^5.5.4"
 	},
-	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+	"packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
 }
