--- a/.github/workflows/yehezgun.yaml
+++ b/.github/workflows/yehezgun.yaml
@@ -1,4 +1,4 @@
-name: YehezGun CI
+name: Template CI
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Install pnpm
       uses: pnpm/action-setup@v4
       with:
@@ -27,6 +27,6 @@ jobs:
       with:
         version: latest
     - name: Run Biome
-      run: biome lint src/
+      run: pnpm biome:lint:ci
     - name: Build
       run: pnpm build
