--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "biome:lint": "biome lint --write src/",
     "biome:lint:ci": "biome lint src/",
     "test": "vitest",
+    "test:ci": "vitest --run",
     "up-latest": "pnpm up --latest"
   },
   "dependencies": {
