--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "build": "next build --turbopack",
     "dev": "next dev --turbopack",
     "start": "next start",
-    "sst:dev": "sst dev",
-    "sst:deploy": "sst deploy --stage production",
     "test": "vitest",
     "test:ci": "vitest --run",
     "up-latest": "pnpm up --latest"
@@ -20,8 +18,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "sst": "3.17.4"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
